Testes
Criação de alguns testes para atualizaPreco